      favor of ~mu4e-headers-toggle-property~.

    - There's also a new property ~mu4e-headers-hide-enabled~, which controls
      wheter ~mu4e-headers-hide-predicate~ is applied (when non-~nil~). This can be
      used to temporarily turn the predicate off/on.

    - When searching, the number of hidden messages is now shown in the
      message footer along with the number of Found messages

    - all the obsolete function and variable aliases have been moved to
      ~mu4e-obsolete.el~ so we can unclutter the non-obsolete code a bit.

*** guile

     - in the 1.8 release, the /current/ Guile API was deprecated; that does not
       mean that Guile support goes way, just that it will look different.

     - Guile script commands are now integrated with the main ~mu~, so without
       further parameters ~mu~ shows both subcommands and scripts. This is a
       work-in-progress!

     - The per-(week|day|year|year-month) scripts have been combined into a
       ~histogram~ script. If you have Guile-support enabled, and have ~gnuplot~
       installed, you can do e.g.,

#+begin_example
     mu histogram -- --time-unit=day --query="hello"
#+end_example

       to get a histogram of such messages. Note, this area is under active
       developement and will likely change.

*** building and installation

    - the autotools build (which was deprecated since 1.8) has now been removed.
      we thank it for its services since 2008. We continue with ~meson~.

      However, we still have ~autogen.sh~ and a ~Makefile~ which can be helpful for
      driving ~meson~-based builds. Think of the ~Makefile~ as a convenient place to
      put common action for which I always forget the ~meson~ incantation.**

    - ~meson~ 56.0 or higher is required for building

    - ~emacs~ 26.3 or higher is needed for ~mu4e~

*** internals

    As usual, there have been a number of internal updates in the ~mu~ codebase:

    - reworked the internal s-expression parser
